k8s/nodejs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  type: LoadBalancer  
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
